cmake_minimum_required(VERSION 2.6)
project(account)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(account_common/include)
include_directories(account_common/src)
include_directories(account_open/src)
include_directories(config/src)
include_directories(config/include)
include_directories(utils/include)
include_directories(utils/src)
include_directories(proto_lib/include)
include_directories(proto_lib/src)
include_directories(${PROJECT_SOURCE_DIR}/plib/outerlib/protobuf-2.6.1/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/outerlib/curl-7.45.0/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/spp/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/applib/milink_api/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/applib/hy_mstore_api_v2/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/applib/mlist_api/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/applib/mlist_api/proto)
include_directories(${PROJECT_SOURCE_DIR}/plib/applib/Iris_api_v3/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/mlb/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/baselib/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/webapp_syncframe_v2/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/outerlib/zkclient-3.4.6/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/outerlib/jsoncpp-1.6.2/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/outerlib/curl-7.45.0/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/outerlib/openssl-1.0.2a/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/applib/zhibo_util/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/outerlib/boost-1.41.0/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/outerlib/thrift-0.8.0/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/applib/bitmap_api/include)
include_directories(${PROJECT_SOURCE_DIR}/plib/misf/include/old)
include_directories(${PROJECT_SOURCE_DIR}/plib/misf/include/dcc)
include_directories(${PROJECT_SOURCE_DIR}/plib/misf/include/ccd)
include_directories(${PROJECT_SOURCE_DIR}/plib/misf/include/common)
include_directories(${PROJECT_SOURCE_DIR}/plib/misf/include/mcd)
include_directories(${PROJECT_SOURCE_DIR}/plib/misf/include/base)

add_subdirectory(account_open)
